--- a/style.css
+++ b/style.css
@@ -47,21 +47,96 @@ table {
 /* CSS RESET END */
 
 :root {
-    --primary-color
-    --background-color: lightgrey;
-    --font-color
-    --hover-color
-    --overlay-color
+    --primary-color: #0484FF;
+    --background-color: #FFFFFF;
+    --font-color: black;
 }
- html, body {
-     max-width: 1200px;
-     height: 100%
- }
 
- body {
-     background-color: var(--background-color);
- }
+body {
+	background-color: var(--background-color);
+	max-width: 1200px;
+	margin: auto;
+}
 
- .welcome {
-     font-family: '';
- }
+.background-layer {
+	background-color: var(--background-color);
+	display: flex;
+	height: 100vh;
+	flex-direction: column;
+}
+
+.header {
+	display: flex;
+	flex-direction: row-reverse;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+	height: 5vh;
+
+}
+
+.header img {
+	height: 65px;
+}
+
+.header h1 {
+	color: var(--font-color);
+	font-family: 'Roboto Slab';
+	font-weight: 900;
+	font-size: 30px;
+}
+
+.searchbar {
+	display: flex;
+	justify-content: center;
+	margin: 25px auto 0 auto;
+	height: 50px;
+	width: 700px;
+}
+
+.searchbar i {
+	color: black;
+}
+
+.searchbar input {
+	align-self: center;
+	height: 30px;
+	border-radius: 10px;
+	border: none;
+	width: 600px;
+	background-color: #E8EDFF;
+	font-family: 'Roboto';
+	font-weight: bold;
+	padding-left: 15px;
+}
+
+
+.searchbar input:focus {
+	outline: none!important;
+}
+
+.content-box1 {
+	display: flex;
+	height: 100px;
+	flex-direction: column;
+	justify-content: center;
+	width: 620px;
+	height: 400px;
+	border-radius: 10px;
+	background-color: #E8EDFF;
+}
+
+.content-box2 {
+	height: 100px;
+	width: 620px;
+	height: 200px;
+	border-radius: 10px;
+	background-color: #E8EDFF;
+}
+
+.content {
+	margin: auto;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
