--- a/style.css
+++ b/style.css
@@ -48,54 +48,44 @@ table {
 
 :root {
     --primary-color: #0484FF;
-    --background-color: #FFFFFF;
+    --background-color: white ;
     --font-color: black;
 }
 
 body {
 	background-color: var(--background-color);
-	max-width: 1200px;
-	margin: auto;
 }
 
-.background-layer {
-	background-color: var(--background-color);
-	display: flex;
-	height: 100vh;
-	flex-direction: column;
+h1 {
+	color: var(--font-color);
+	font-family: 'Roboto Slab';
+	font-weight: 900;
+	font-size: 20px;
 }
 
 .header {
 	display: flex;
-	flex-direction: row-reverse;
-	flex-wrap: nowrap;
-	justify-content: center;
 	align-items: center;
+	justify-content: space-between;
 	height: 5vh;
-
+	max-width: 100vw;
+	padding: 15px 15px 0 25px;
 }
 
 .header img {
-	height: 65px;
+	display: flex;
+	height: 40px;
+	justify-content: right;
+	padding-right: 5px;
 }
 
 .header h1 {
-	color: var(--font-color);
-	font-family: 'Roboto Slab';
-	font-weight: 900;
-	font-size: 30px;
+	display: none; /* mobile doesn't show the name */
 }
 
 .searchbar {
 	display: flex;
 	justify-content: center;
-	margin: 25px auto 0 auto;
-	height: 50px;
-	width: 700px;
-}
-
-.searchbar i {
-	color: black;
 }
 
 .searchbar input {
@@ -103,7 +93,7 @@ body {
 	height: 30px;
 	border-radius: 10px;
 	border: none;
-	width: 600px;
+	width: 50vw;
 	background-color: #E8EDFF;
 	font-family: 'Roboto';
 	font-weight: bold;
@@ -115,28 +105,37 @@ body {
 	outline: none!important;
 }
 
-.content-box1 {
+
+.ham-menu div {
+	height: 5px;
+	background-color: black;
+	margin: 5px 0;
+	border-radius: 10px;
+}
+
+.bar-1, .bar-3 {
+	width: 35px;
+}
+
+.bar-2 {
+	width: 45px;
+}
+
+.welcome-text h1 {
+	font-size: 24px;
+}
+
+.welcome-text {
 	display: flex;
-	height: 100px;
-	flex-direction: column;
+	justify-content: left;
+	padding: 25px 0 25px 25px;
+}
+
+.content-box1 {
+	display: none;
 	justify-content: center;
-	width: 620px;
+	max-width: 80vw;
 	height: 400px;
 	border-radius: 10px;
 	background-color: #E8EDFF;
-}
-
-.content-box2 {
-	height: 100px;
-	width: 620px;
-	height: 200px;
-	border-radius: 10px;
-	background-color: #E8EDFF;
-}
-
-.content {
-	margin: auto;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
 }
