--- a/style.css
+++ b/style.css
@@ -48,12 +48,18 @@ table {
 
 :root {
     --primary-color: #0484FF;
+	--secondary-color: #E8EDFF;
     --background-color: white ;
     --font-color: black;
 }
 
 body {
 	background-color: var(--background-color);
+}
+
+.background-layer {
+	max-width: 1200px;
+	margin: 0 auto;
 }
 
 h1 {
@@ -90,14 +96,14 @@ h1 {
 
 .searchbar input {
 	align-self: center;
-	height: 30px;
+	height: 35px;
 	border-radius: 10px;
 	border: none;
 	width: 50vw;
 	background-color: #E8EDFF;
 	font-family: 'Roboto';
 	font-weight: bold;
-	padding-left: 15px;
+	padding-left: 25px;
 }
 
 
@@ -132,10 +138,9 @@ h1 {
 }
 
 .content-box1 {
-	display: none;
-	justify-content: center;
-	max-width: 80vw;
+	width: 90vw;
+	margin: auto;
 	height: 400px;
-	border-radius: 10px;
-	background-color: #E8EDFF;
+	border-radius: 15px;
+	background-color: var(--secondary-color);
 }
