--- a/style.css
+++ b/style.css
@@ -55,6 +55,11 @@ table {
 
 body {
 	background-color: var(--background-color);
+	background: url("img/background.svg");
+	background-repeat: no-repeat;
+	background-position-x: center;
+	background-position-y: 200px;
+	background-size: 900px;
 }
 
 .background-layer {
@@ -75,7 +80,7 @@ h1 {
 	justify-content: space-between;
 	height: 5vh;
 	max-width: 100vw;
-	padding: 15px 15px 0 25px;
+	padding: 25px 15px 0 25px;
 }
 
 .header img {
@@ -92,14 +97,17 @@ h1 {
 .searchbar {
 	display: flex;
 	justify-content: center;
+	width: 100vw;
+	padding: 0 15px;
 }
 
 .searchbar input {
+	width: 90%;
+	max-width: 880px;
 	align-self: center;
 	height: 35px;
 	border-radius: 10px;
 	border: none;
-	width: 50vw;
 	background-color: #E8EDFF;
 	font-family: 'Roboto';
 	font-weight: bold;
@@ -128,17 +136,29 @@ h1 {
 }
 
 .welcome-text h1 {
-	font-size: 24px;
+	font-size: 31px;
+}
+
+.section-text h1 {
+	font-size: 24px
 }
 
 .welcome-text {
-	display: flex;
-	justify-content: left;
-	padding: 25px 0 25px 25px;
+	margin: auto;
+	padding: 40px 45px 25px 45px;
+	max-width: 900px;
+}
+
+.section-text {
+	margin: auto;
+	padding: 0 45px 25px 45px;
+	max-width: 900px;
 }
 
 .content-box1 {
+	display: none;
 	width: 90vw;
+	max-width: 900px;
 	margin: auto;
 	height: 400px;
 	border-radius: 15px;
