--- a/style.css
+++ b/style.css
@@ -74,20 +74,31 @@ h1 {
 	font-size: 20px;
 }
 
+p {
+	color: black;
+	font-family: 'Roboto';
+	font-size: 18px;
+	font-weight: 500;
+}
+
 .header {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 	height: 5vh;
-	max-width: 100vw;
+	width: 100vw;
+	max-width: 1200px;
 	padding: 25px 15px 0 25px;
+	position: fixed;
+	padding-bottom: 25px;
+	background: linear-gradient(white 60%, rgba(255, 255, 255, 0));
 }
 
 .header img {
 	display: flex;
 	height: 40px;
 	justify-content: right;
-	padding-right: 5px;
+	padding-right: 50px;
 }
 
 .header h1 {
@@ -145,7 +156,7 @@ h1 {
 
 .welcome-text {
 	margin: auto;
-	padding: 40px 45px 25px 45px;
+	padding: 110px 45px 25px 45px;
 	max-width: 900px;
 }
 
@@ -155,11 +166,50 @@ h1 {
 	max-width: 900px;
 }
 
+.content {
+	display: flex;
+	flex-direction: column;
+}
+
+.content-box1 h1, p {
+	padding: 15px 0 0 15px;
+}
 .content-box1 {
-	display: none;
+	display: flex;
+	flex-direction: column;
 	width: 90vw;
 	max-width: 900px;
-	margin: auto;
+	margin: 0 auto 25px;
+	height: 100px;
+	border-radius: 15px;
+	background-color: var(--secondary-color);
+}
+
+.content-box2 {
+	display: flex;
+	width: 90vw;
+	max-width: 900px;
+	margin: 0 auto 25px;
+	height: 280px;
+	border-radius: 15px;
+	background-color: var(--secondary-color);
+}
+
+.content-box3 {
+	display: flex;
+	width: 90vw;
+	max-width: 900px;
+	margin: 0 auto 25px;
+	height: 400px;
+	border-radius: 15px;
+	background-color: var(--secondary-color);
+}
+
+.content-box4 {
+	display: flex;
+	width: 90vw;
+	max-width: 900px;
+	margin: 0 auto 25px;
 	height: 400px;
 	border-radius: 15px;
 	background-color: var(--secondary-color);
