--- a/style.css
+++ b/style.css
@@ -47,10 +47,10 @@ table {
 /* CSS RESET END */
 
 :root {
-        --primary-color: #0484FF;
-        --secondary-color: #E8EDFF;
-        --background-color: white ;
-        --font-color: black;
+    --primary-color: #0484FF;
+	--secondary-color: #E8EDFF;
+    --background-color: white ;
+    --font-color: black;
 }
 
 body {
@@ -58,38 +58,163 @@ body {
 	background: url("img/background.svg");
 	background-repeat: no-repeat;
 	background-position-x: center;
+	background-position-y: 200px;
 	background-size: 900px;
 }
 
 .background-layer {
-	height: 100vh;
-	margin: 0 auto;
-	display: flex;
-	justify-content: center;
-	align-items: center;
 	max-width: 1200px;
+	margin: 0 auto;
 }
-
 
 h1 {
-	color: var(--primary-color);
+	color: var(--font-color);
 	font-family: 'Roboto Slab';
 	font-weight: 900;
-	font-size: 29px;
+	font-size: 20px;
 }
 
-h2 {
+p {
 	color: black;
 	font-family: 'Roboto';
 	font-size: 18px;
 	font-weight: 500;
 }
 
-img {
-	height: 100px;
+.header {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	height: 5vh;
+	width: 100vw;
+	max-width: 1200px;
+	padding: 25px 15px 0 25px;
+	position: fixed;
+	padding-bottom: 25px;
+	background: linear-gradient(white 60%, rgba(255, 255, 255, 0));
 }
 
-h1, h2 {
+.header img {
 	display: flex;
-	text-shadow: 150px 150px white;
+	height: 40px;
+	justify-content: right;
+	padding-right: 50px;
+}
+
+.header h1 {
+	display: none; /* mobile doesn't show the name */
+}
+
+.searchbar {
+	display: flex;
+	justify-content: center;
+	width: 100vw;
+	padding: 0 15px;
+}
+
+.searchbar input {
+	width: 90%;
+	max-width: 880px;
+	align-self: center;
+	height: 35px;
+	border-radius: 10px;
+	border: none;
+	background-color: #E8EDFF;
+	font-family: 'Roboto';
+	font-weight: bold;
+	padding-left: 25px;
+}
+
+
+.searchbar input:focus {
+	outline: none!important;
+}
+
+
+.ham-menu div {
+	height: 5px;
+	background-color: black;
+	margin: 5px 0;
+	border-radius: 10px;
+}
+
+.bar-1, .bar-3 {
+	width: 35px;
+}
+
+.bar-2 {
+	width: 45px;
+}
+
+.welcome-text h1 {
+	font-size: 31px;
+}
+
+.section-text h1 {
+	font-size: 24px
+}
+
+.welcome-text {
+	margin: auto;
+	padding: 110px 45px 25px 45px;
+	max-width: 900px;
+}
+
+.section-text {
+	margin: auto;
+	padding: 0 45px 25px 45px;
+	max-width: 900px;
+}
+
+.content {
+	display: flex;
+	flex-direction: column;
+}
+
+.content-box1 h1 {
+	padding: 15px 0 0 15px;
+}
+
+.content-box1 p {
+	padding: 0 0 0 15px;
+}
+.content-box1 {
+	display: flex;
+	flex-direction: column;
+	width: 90vw;
+	max-width: 900px;
+	margin: 0 auto 25px;
+	height: 100px;
+	border-radius: 15px;
+	background-color: var(--secondary-color);
+}
+
+.content-box2 {
+	display: flex;
+	width: 90vw;
+	max-width: 900px;
+	margin: 0 auto 25px;
+	height: 280px;
+	border-radius: 15px;
+	background-color: var(--secondary-color);
+}
+
+.content-box3 {
+	display: flex;
+	width: 90vw;
+	max-width: 900px;
+	margin: 0 auto 25px;
+	height: 400px;
+	border-radius: 15px;
+	background-color: var(--secondary-color);
+}
+
+.content-box4 {
+	display: flex;
+	width: 90vw;
+	max-width: 900px;
+	margin: 0 auto 25px;
+	height: 400px;
+	border-radius: 15px;
+	background-color: var(--secondary-color);
 }
